# static-web-server

./: .drone.yml  .gitignore  Cargo.toml  Makefile  Tasks.Dev.toml
src/: env.rs  error_page.rs  handlers.rs  helpers.rs  logger.rs  main.rs
