[package]
name = "static-web-server"
version = "1.7.0"
authors = ["Jose Quintana <https://git.io/joseluisq>"]
license = "MIT OR Apache-2.0"
description = "A blazing fast static files-serving web server powered by Rust Iron."
repository = "https://github.com/joseluisq/static-web-server"
readme = "README.md"
keywords = [
    "docker-image",
    "static-web-server",
    "file-server",
    "http-server",
    "linux",
    "darwin",
    "musl-libc",
    "x86-64"
]
categories = ["network-programming", "web-programming::http-server"]
edition = "2018"
publish = false
include = ["src/**/*", "Cargo.toml", "Cargo.lock"]

[dependencies]
gotham = "0.4.0"
structopt = "0.3"
nix = "0.14"
signal = "0.7"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"

[dev-dependencies]

[profile.release]
lto = true
